# builder-examples

./: big-greet.js  big-greet.wat  index.js  nine.wat  package-lock.json  package.json
big/: Cargo.toml  inspect.wat
big-greet/: big-greet.core3.wasm  big-greet.core4.wasm  big-greet.core7.wasm  big-greet.core8.wasm  big-greet.js  big_greet.core.wasm  big_greet.core2.wasm  big_greet.core3.wasm  big_greet.d.ts  big_greet.js  new-big-greet.core.wasm  new-big-greet.core3.wasm  new-big-greet.js
big-greet/imports/: filesystem.d.ts  preopens.d.ts  streams.d.ts
big/src/: lib.rs
big/wit/: world.wit
graph/: Cargo.toml
graph-bindings/: graph.core2.wasm  graph.d.ts  graph.js
graph-bindings/exports/: graph.d.ts
graph-bindings/imports/: filesystem.d.ts
hello/: Cargo.toml
hello/src/: lib.rs
hello/wit/: world.wit
